# found

./: LICENSE  README.md  pyproject.toml
src/docfinder/: __init__.py
src/found/: __init__.py
tests/: test_doc.py
