[project]
name = "docfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henning Claßen", email = "code@clssn.de" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "sentence-transformers>=5.0.0",
]

[project.scripts]
docs = "docfinder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
