[project]
name = "found"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henning Claßen", email = "code@clssn.de" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "platformdirs>=4.3.8",
    "sentence-transformers>=5.0.0",
    "typer>=0.16.0",
]

[project.scripts]
found = "found:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
