[project]
name = "pyfound"
version = "0.1.2"
description = "Found! is an AI enabled tool for fast semantic search over your personal documents."
readme = "README.md"
authors = [
    { name = "Henning Claßen", email = "code@clssn.de" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "platformdirs>=4.3.8",
    "sentence-transformers>=5.0.0",
    "typer>=0.16.0",
]

[project.scripts]
found = "found:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/found"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
